@@ -1,5 +1,8 @@
 2010-05-06  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-misc.el (c-mode-common-hook): User c-mode-common-hook to
+	load sourcepair.
+
 	* init-basic.el (switch-to-back-buffer): Rename to switch-to-other-buffer.
 
 	* init-misc.el (require): Set sourcepair for eval-after-load.
